@@ -2,6 +2,7 @@
 
 	* Application/UI/FSTableView+Scrolling.m
 	* Application/FSDocument+Quantrix.m
+	* FSCore/FSSelection.m
 	Warning fixes.
 
 2012-01-25 Riccardo Mottola <rm@gnu.org>
